# satellite-edge-computing

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  related-work.md  simulation.md
scripts/: demo_phase3.py  run_phase4_benchmark.py  train_phase2.py
src/satellite_edge/: __init__.py
src/satellite_edge/agents/: __init__.py  baselines.py  evaluation.py  ppo_agent.py  training.py
src/satellite_edge/data/: __init__.py  datasets.py  tile_loader.py  value_estimator.py
src/satellite_edge/environment/: __init__.py  satellite_env.py  tasks.py
src/satellite_edge/evaluation/: __init__.py  metrics.py  runner.py  scenarios.py  visualization.py
src/satellite_edge/models/: __init__.py  base.py  cloud_mask.py  compressor.py  detector.py
src/satellite_edge/orbital/: __init__.py  ground_station.py  orbit_propagator.py
tests/: __init__.py  test_baselines.py  test_cv_models.py  test_evaluation.py  test_evaluation_metrics.py  test_image_task.py  test_orbital.py  test_ppo_agent.py  test_runner.py  test_satellite_env.py  test_sb3_integration.py  test_scenarios.py  test_tasks.py  test_tile_loader.py  test_training_integration.py  test_value_estimator.py  test_visualization.py
