[project]
name = "satellite-edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "rasterio>=1.5.0",
    "sentinelhub>=3.11.3",
    "skyfield>=1.54",
    "stable-baselines3>=2.7.1",
    "torch>=2.9.1",
    "ultralytics>=8.4.6",
]
