[project]
name = "satellite-edge"
version = "0.1.0"
description = "RL-based onboard compute scheduler for Earth observation satellites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "rasterio>=1.5.0",
    "sentinelhub>=3.11.3",
    "skyfield>=1.54",
    "stable-baselines3>=2.7.1",
    "torch>=2.9.1",
    "ultralytics>=8.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=satellite_edge --cov-report=term-missing"

[tool.coverage.run]
source = ["src/satellite_edge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/satellite_edge"]
